--- a/configs/cnn.yaml
+++ b/configs/cnn.yaml
@@ -1,52 +1,18 @@
+# CNN-specific overrides
 model:
-  name: "cnn"
-  type: "convolutional_neural_network"
-  
-architecture:
-  input_shape: [64, 64, 1]  # Adjust based on your data
-  conv_layers:
-    - filters: 32
-      kernel_size: [3, 3]
-      activation: "relu"
-      padding: "same"
-    - filters: 64
-      kernel_size: [3, 3]
-      activation: "relu"
-      padding: "same"
-    - filters: 128
-      kernel_size: [3, 3]
-      activation: "relu"
-      padding: "same"
-  
-  pooling:
-    type: "max"
-    pool_size: [2, 2]
-    
-  dense_layers: [256, 128]
-  output_dim: 1
+  type: "cnn"
+  filters: [32, 64, 128]
+  kernel_size: 3
+  pool_size: 2
   dropout: 0.3
-  
-training:
-  batch_size: 16
-  epochs: 50
   learning_rate: 0.001
-  optimizer: "adam"
-  loss: "mse"
-  validation_split: 0.2
-  early_stopping:
-    patience: 15
-    monitor: "val_loss"
-    
+
+training:
+  epochs: 150
+  batch_size: 16
+
 data:
-  preprocessing:
-    resize: [64, 64]
-    normalization: "minmax"
-  augmentation:
-    rotation_range: 10
-    width_shift_range: 0.1
-    height_shift_range: 0.1
-    horizontal_flip: true
-    
-paths:
-  model_save: "results/checkpoints/cnn_model.h5"
-  logs: "results/logs/cnn_training.log"
+  reshape: [32, 32, 1]  # Reshape for CNN input
+
+experiment:
+  name: "cnn_experiment"
