--- a/configs/gbr.yaml
+++ b/configs/gbr.yaml
@@ -1,35 +1,10 @@
+# GBR-specific overrides
 model:
-  name: "gradient_boosting_regressor"
-  type: "ensemble"
-  
-parameters:
+  type: "gbr"
   n_estimators: 100
   learning_rate: 0.1
   max_depth: 6
-  min_samples_split: 2
-  min_samples_leaf: 1
-  subsample: 1.0
-  random_state: 42
-  
-training:
-  validation_split: 0.2
-  cross_validation:
-    folds: 5
-    scoring: "neg_mean_squared_error"
-    
-hyperparameter_tuning:
-  method: "optuna"
-  n_trials: 100
-  parameters:
-    n_estimators: [50, 100, 200, 300]
-    learning_rate: [0.01, 0.1, 0.2]
-    max_depth: [3, 6, 9, 12]
-    
-data:
-  features: []  # Will be populated based on dataset
-  target: "target_variable"
-  normalization: "standard"
-  
-paths:
-  model_save: "results/checkpoints/gbr_model.pkl"
-  logs: "results/logs/gbr_training.log"
+  subsample: 0.8
+
+experiment:
+  name: "gbr_experiment"
